fix spacing discrepancy from the move from md to html

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -280,7 +280,7 @@ code {
 #cm-code-slurp,
 #cm-code-barf
 {
-  height: 50px;
+  height: 70px;
 }
 
 #cm-code-string
